<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.nationfis.controlacademicononfc.Fragments.ActivarMatriculaFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:weightSum="1">


        <Switch
            android:id="@+id/switch0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checked="true"
            android:showText="true"
            android:text="@string/tm"
            android:textOff="@string/normal"
            android:textOn="@string/anormal" />

        <SearchView
            android:id="@+id/sv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:padding="10dp" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
        <ListView
            android:id="@+id/estudiantes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
        </android.support.v4.widget.SwipeRefreshLayout>
    </LinearLayout>

</RelativeLayout>
